syntax = "proto3";

package example;

message ExampleMessage {
  string field1 = 1;
  int64 field2 = 2;
}

